# go2w_navigation_stack

./: .gitignore  AGENTS.md  README.md
docs/: agent_collaboration_policy.md
docs/architecture/: architecture_state.md  interface_contracts.md  system_blueprint.md  system_blueprint.md.md
docs/handoff/: README.md  current_project_state.md  new_model_initialization_prompt.md  next_agent_notes.md  phase4_migration_handoff_report.md  reading_order_and_file_map.md  risk_cleanup_log.md
docs/superpowers/plans/: 2026-04-27-phase2a-fastlio-input-audit.md  2026-04-27-phase2b-fastlio-dryrun.md  2026-04-28-phase2c-fastlio-patch-gate.md  2026-04-29-phase2d-fastlio-no-tf-dryrun.md  2026-04-29-phase2e-fastlio-contract-stabilization.md  2026-04-30-phase2f-tf-authority-activation.md  2026-04-30-phase2g-perception-stability.md  2026-04-30-phase2h-costmap-consumer.md  2026-04-30-phase3a-nav2-same-floor.md  2026-04-30-phase3b-route-graph-baseline.md  2026-04-30-phase3c-hardening.md  2026-04-30-phase4-pre-migration-freeze.md
docs/superpowers/specs/: 2026-04-27-phase2a-fastlio-input-audit-design.md  2026-04-27-phase2b-fastlio-dryrun-design.md  2026-04-28-phase2c-fastlio-patch-gate-design.md  2026-04-29-phase2d-fastlio-no-tf-dryrun-design.md  2026-04-29-phase2e-fastlio-contract-stabilization-design.md  2026-04-30-phase2f-tf-authority-activation-design.md  2026-04-30-phase2g-perception-stability-design.md  2026-04-30-phase2h-costmap-consumer-design.md  2026-04-30-phase3a-nav2-same-floor-design.md  2026-04-30-phase3b-route-graph-baseline-design.md  2026-04-30-phase3c-hardening-design.md  2026-04-30-phase4-pre-migration-freeze-design.md
docs/verification/: gazebo_gpu_rebaseline.md  phase1_runtime_acceptance.md  phase2_costmap_consumer_gate.md  phase2_fastlio_contract_stabilization.md  phase2_fastlio_dryrun.md  phase2_fastlio_input_audit.md  phase2_fastlio_no_tf_dryrun.md  phase2_fastlio_patch_gate.md  phase2_perception_stability_acceptance.md  phase2_runtime_acceptance.md  phase2_tf_authority_activation.md  phase3_runtime_acceptance.md  phase3a_nav2_same_floor.md  phase3b_route_graph_baseline.md  phase3c_hardening_acceptance.md
go2w_control/: CMakeLists.txt  package.xml
go2w_description/: CMakeLists.txt  package.xml
go2w_description/launch/: description.launch.py
go2w_description/rviz/: go2w_phase1.rviz
go2w_description/urdf/: go2w_placeholder.urdf
go2w_mission/: CMakeLists.txt  package.xml
go2w_navigation/: CMakeLists.txt  package.xml
go2w_navigation/behavior_trees/: phase3a_navigate_through_poses.xml  phase3a_navigate_to_pose.xml
go2w_navigation/config/: phase2h_costmap_consumer.yaml  phase3a_nav2_same_floor.yaml  phase3b_route_server.yaml  phase3c_multifloor_route_server.yaml
go2w_navigation/graphs/: phase3b_same_floor_route.geojson  phase3c_hospital_multifloor_route.geojson
go2w_navigation/launch/: phase2h_costmap_consumer.launch.py  phase3a_nav2_same_floor.launch.py  phase3b_route_graph.launch.py
go2w_navigation/maps/: phase3c_hospital_floor_1.pgm  phase3c_hospital_floor_1.yaml  phase3c_hospital_floor_2.pgm  phase3c_hospital_floor_2.yaml  phase3c_hospital_map_index.yaml
go2w_perception/: CMakeLists.txt  package.xml
go2w_perception/config/: phase2e_fastlio_contract.yaml  phase2f_tf_authority.yaml
go2w_perception/go2w_perception/: __init__.py  fastlio_frame_contract_adapter.py  fastlio_tf_authority.py  pointcloud_timing_adapter.py
go2w_perception/launch/: phase2e_fastlio_contract.launch.py  phase2f_tf_authority.launch.py
go2w_perception/patches/fast_lio_ros2/: phase2c_no_livox_no_tf.patch
go2w_perception/scripts/: go2w_fastlio_input_adapter  go2w_fastlio_output_adapter  go2w_fastlio_tf_authority
go2w_perception/test/: conftest.py  test_fastlio_frame_contract_adapter.py  test_fastlio_tf_authority.py  test_pointcloud_timing_adapter.py
go2w_sim/: CMakeLists.txt  package.xml
go2w_sim/config/: controllers.yaml
go2w_sim/launch/: sim.launch.py
go2w_sim/worlds/: empty_world.sdf  phase3a_feature_world.sdf  phase3c_hospital_multifloor_world.sdf
tools/: apply_phase2c_fastlio_patch.sh  check_phase2_fastlio_external.sh  cleanup_sim_runtime.sh  inspect_phase2_fastlio_inputs.py  prepare_phase2d_fastlio_external.sh  verify_go2w_sim_launch.sh  verify_phase1_runtime.sh  verify_phase2d_fastlio_no_tf_dryrun.sh  verify_phase2e_fastlio_contract.sh  verify_phase2f_tf_authority.sh  verify_phase2g_perception_stability.sh  verify_phase2h_costmap_consumer.sh  verify_phase3a_nav2_same_floor.sh  verify_phase3b_route_graph.sh  verify_phase3c_fastlio_dependency_baseline.sh  verify_phase3c_hospital_world.sh  verify_phase3c_multifloor_route_graph.sh  verify_phase4_pre_handoff.sh
