<?xml version="1.0"?>
<package format="3">
  <name>go2w_navigation</name>
  <version>0.0.1</version>
  <description>Phase 0 scaffold package for navigation ownership in the Go2W navigation stack.</description>
  <maintainer email="3133903229@qq.com">Xiong-z-x</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
